--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "loopstudios-landing-page",
   "version": "0.1.0",
+  "homepage": "https://yohanr19.github.io/loopstudios-landing-page/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -15,7 +16,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -34,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3",
+    "github-pages": "^3.0.2"
   }
 }
